Fix search overlay flicker on load

--- a/functions/styles/searchMap.css
+++ b/functions/styles/searchMap.css
@@ -77,13 +77,14 @@ h1 {
     background-color:rgb(247, 247, 247);
     margin: auto;
     /* margin-top:1em; */
-    height: 100%;
+    /* height: 100%; */
     max-width: 475px;
     max-height:500px;
     overflow-y:hidden;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
     pointer-events: all;
     opacity:98%;
+    height:175px;
 }
 
 #outer-tree-content {
